2008-08-10  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (absolute_filenames): preserve even non-directories
	in the returned path, in case they contain metacharacters
	meaningful to TeX, such as braces.
	Bug report from Werner Lemberg, 10 Aug 2008 08:26:58.

2008-07-27  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (xref_files_save): null out TAR_OPTIONS.
	From Jim Meyering.

2008-07-27  Karl Berry  <karl@tug.org>

	* pretest 4.12.93.
	
	* gnulib: import memmem.

2008-07-07  Karl Berry  <karl@gnu.org>

	* install-info/tests/*-test: prefix the template with ii##.

2008-07-06  Karl Berry  <karl@tug.org>

	* pretest 4.12.92.

2008-07-05  Robert Kiesling  <rkiesling@earthlink.net>  (tiny change)

	* makeinfo/node.c (cm_node): move <p> to after anchors, closer to
	<div>.

2008-07-05  Karl Berry  <karl@gnu.org>

	* install-info/tests/ii-0041-test, ii-0050-test: with template,
	have to handle compressed output files differently, or
	the temp files are left behind by distclean.

	* install-info/tests/*-test: use mktemp XXXXXXXX for BSD.
	Report from Unga, 29 Jun 2008 08:29:54.

2008-07-04  Akim Demaille  <akim@epita.fr>

	texi2dvi: Fix -t.
	* util/texi2dvi (run_tex): The code that installs a symlink was
	installing the symlink directly to itself, instead of towards the
	actual source file.  I wonder how it worked.  As a result -t was
	not taken into account.
	Fix the symlink creation.
	* util/texi2dvi.test (one_run): Test -t support.

2008-07-03  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (pdftexi2dvi.1): use change_envvars here too.

2008-07-02  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (generated_files_get): find .fls files too.
	(from the -recorder option.)
	Suggestion from Wybo Dekker.

2008-07-01  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (change_envvars): include util_srcdir in PATH
	so texi2pdf can find texi2dvi for making the man pages.
	Report from Michael Haubenwallner, 01 Jul 2008 14:33:18.

2008-06-28  Sergey Poznyakoff  <gray@gnu.org.ua>
